Fixed small problem with Details tab overflow and root line.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -435,7 +435,7 @@ font-family: "Source Sans Pro", sans-serif;
 }
 #overflowssgone {
     width: 100%;
-    height: 95vh;
+    height: 82vh;
     overflow-y:auto;
 }
 
